UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Agreement Type</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Types</valueSetName>
    </valueSet>
</CustomField>