UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/evcspeed__c.field-meta.xml
<CustomField>
    <fullName>evcspeed__c</fullName>
    <label>EVC Speed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>