UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/ftr_ProductDisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>ftr_ProductDisplaySequence__c</fullName>
    <label>Product Display Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>