UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Is_LegacyVlocityProduct__c.field-meta.xml
<CustomField>
    <fullName>Is_LegacyVlocityProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is LegacyVlocityProduct</label>
    <type>Checkbox</type>
</CustomField>