UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/isTechInstallFeeFIOS__c.field-meta.xml
<CustomField>
    <fullName>isTechInstallFeeFIOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTechInstallFeeFiberOptic</label>
    <type>Checkbox</type>
</CustomField>