UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRC</label>
    <type>Checkbox</type>
</CustomField>