UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/mrcusoc__c.field-meta.xml
<CustomField>
    <fullName>mrcusoc__c</fullName>
    <label>MRC Usoc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>