UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NRC</label>
    <type>Checkbox</type>
</CustomField>