UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/nrcusoc__c.field-meta.xml
<CustomField>
    <fullName>nrcusoc__c</fullName>
    <label>NRC Usoc</label>
    <length>10</length>
    <type>Text</type>
</CustomField>