UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Partnered__c.field-meta.xml
<CustomField>
    <fullName>Partnered__c</fullName>
    <label>Partnered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>