UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Recurring_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Type__c</fullName>
    <description>MRC=P/ NRC=T type</description>
    <label>Recurring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>