UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>Schedule Type</description>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schedule_Types</valueSetName>
    </valueSet>
</CustomField>