UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/spec__c.field-meta.xml
<CustomField>
    <fullName>spec__c</fullName>
    <label>SPEC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>