UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/Speed_BW_Whls__c.field-meta.xml
<CustomField>
    <fullName>Speed_BW_Whls__c</fullName>
    <description>Created to use as Condition for BSA Wholesale</description>
    <label>Speed BW Whls</label>
    <length>10</length>
    <type>Text</type>
</CustomField>