UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/unispeed__c.field-meta.xml
<CustomField>
    <fullName>unispeed__c</fullName>
    <label>UNI Speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>