UCF-APR2.4/ftr main/force-app/main/default/objects/Product2/fields/VendorName__c.field-meta.xml
<CustomField>
    <fullName>VendorName__c</fullName>
    <label>Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polycom</fullName>
            </value>
            <value>
                <fullName>Yealink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>